# autohome

./: README.md
backend/: test.json
backend/autometa_home/: README.md  crewai_flow.html  device_types.json  pyproject.toml  state.json
backend/autometa_home/src/autometa_home/: app.py  main.py  types.py
backend/autometa_home/src/autometa_home/crews/device_picker/: device_picker.py
backend/autometa_home/src/autometa_home/crews/device_picker/config/: agents.yaml  tasks.yaml
backend/autometa_home/src/autometa_home/crews/modify_device_state/: modify_device_state.py
backend/autometa_home/src/autometa_home/crews/modify_device_state/config/: agents.yaml  tasks.yaml
backend/autometa_home/src/autometa_home/crews/nlp_crew/: intent_processing.py
backend/autometa_home/src/autometa_home/crews/nlp_crew/config/: agents.yaml  tasks.yaml
